<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_service_description">"Please turn on accessibility permissions to allow the app to perform gestures. Click Assistant does not collect any personal information.


Y.C. Studio"</string>
    <string name="accessibility_service_id">com.rise.automatic.autoclicker.clicker/.service.accessibility.MouseAccessibilityService</string>
    <string name="accessibility_service_name">Click Assistant</string>
    <string name="activity_config">Save Configurations</string>
    <string name="activity_customize">Personalization</string>
    <string name="activity_iap">Upgrade to VIP</string>
    <string name="activity_translate">Help us translate</string>
    <string name="app_name">Click Assistant</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="chrome_tab_show_as_list_accessibility">Select Accessibility</string>
    <string name="chrome_tab_show_as_list_disable">Uncheck \"Simplified view for open tabs\"</string>
    <string name="chrome_tab_show_as_list_open">Open Chrome</string>
    <string name="chrome_tab_show_as_list_settings">At the top right, tap More > Settings</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">089a64351d284da6bb53449b1acdddd9</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="config_backup_file_title">Click_Assistant_Backup_</string>
    <string name="control_panel_item_add">Click gesture</string>
    <string name="control_panel_item_back">Go back</string>
    <string name="control_panel_item_close">Close</string>
    <string name="control_panel_item_collapse">Collapse / Expand</string>
    <string name="control_panel_item_curve">Curve gesture</string>
    <string name="control_panel_item_delete">Delete a gesture</string>
    <string name="control_panel_item_home">Go to home screen</string>
    <string name="control_panel_item_line">Swipe gesture</string>
    <string name="control_panel_item_notify">Open the notification panel</string>
    <string name="control_panel_item_pinch">Pinch gesture</string>
    <string name="control_panel_item_pinch_out">Spread gesture</string>
    <string name="control_panel_item_play">Start running script</string>
    <string name="control_panel_item_recording">Recording Gestures</string>
    <string name="control_panel_item_save">Save script</string>
    <string name="control_panel_item_settings">Gesture editor</string>
    <string name="control_panel_item_visible">Hide</string>
    <string name="copy">Copy</string>
    <string name="customization_card_click_point_size">Size</string>
    <string name="customization_card_click_point_transparency">Transparency</string>
    <string name="customization_card_control_panel_add_start_btn">Add the start button to the second window</string>
    <string name="customization_card_control_panel_keep_screen_on">Keep screen on</string>
    <string name="customization_card_control_panel_orientation">Orientation</string>
    <string name="customization_card_control_panel_size">Size</string>
    <string name="customization_card_control_panel_timer_visible">Show Timer</string>
    <string name="customization_card_control_panel_transparency">Transparency</string>
    <string name="customization_item_order_more">More controls</string>
    <string name="customization_item_order_sort">Rearrange the order of controls</string>
    <string name="debug_price_not_found" />
    <string name="debug_title_not_found">SKU: \"%1$s\" Not Found</string>
    <string name="default_web_client_id">434860556535-vogv07npkfpvqfv2bmjsta7mdj62adsv.apps.googleusercontent.com</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_close">Close</string>
    <string name="dialog_action_confirm">OK</string>
    <string name="dialog_action_delete">Delete</string>
    <string name="dialog_action_done">Done</string>
    <string name="dialog_action_got_it">Ok, got it</string>
    <string name="dialog_action_reactivate">Reactivate</string>
    <string name="dialog_action_remove_cache_cancel">Cancel</string>
    <string name="dialog_action_remove_cache_ok">OK</string>
    <string name="dialog_action_rename">Rename</string>
    <string name="dialog_action_reset">Reset settings</string>
    <string name="dialog_action_rewarded_watch_video">Watch Video</string>
    <string name="dialog_action_save">Save</string>
    <string name="dialog_msg_close_confirm">Delete content and close</string>
    <string name="dialog_msg_delay_start_time_info">The script will start running after the countdown</string>
    <string name="dialog_msg_delete_config_confirm">Will delete it permanently, continue?</string>
    <string name="force_close_teach_power_manager_before">Sorry, Click Assistant quit unexpectedly last time.</string>
    <string name="force_close_teach_power_manager_info">Please allow the application to use more power in the background, which will prevent the system from forcibly turning off the background service.</string>
    <string name="force_close_teach_power_manager_info_step">Try these steps:</string>
    <string name="permission_tutorial_accessibility">Accessibility</string>
    <string name="permission_tutorial_installed_services">Installed services</string>
    <string name="preference_anti_random_distance">Random position</string>
    <string name="preference_anti_random_duration">Random duration</string>
    <string name="preference_anti_random_interval">Random interval</string>
    <string name="preference_category_title_anti_detection">Anti-detection</string>
    <string name="preference_category_title_default_settings">Default Settings</string>
    <string name="preference_category_title_loop_settings">Number of runs</string>
    <string name="preference_category_title_other">Other settings</string>
    <string name="preference_category_title_start_script">Start running script</string>
    <string name="preference_change_language">Language settings</string>
    <string name="preference_default_action_cycle_times">Action cycle times</string>
    <string name="preference_default_action_delay">Action interval time</string>
    <string name="preference_default_pinch_duration">Pinch duration</string>
    <string name="preference_default_swipe_duration">Swipe duration</string>
    <string name="preference_default_tap_duration">Touch &amp; hold delay</string>
    <string name="preference_loop_after">Stop script after</string>
    <string name="preference_loop_delay">Loop delay</string>
    <string name="preference_other_about_app">About</string>
    <string name="preference_other_restore_defaults">Restore defaults</string>
    <string name="preference_other_translate_app">Translate the App</string>
    <string name="preference_send_feedback">Send Feedback</string>
    <string name="preference_share">Share</string>
    <string name="preference_summary_delay_start_timer">Delayed start time</string>
    <string name="preference_summary_random_distance_info">Set the radius of random click to avoid game detection</string>
    <string name="preference_summary_restore_info">Tap to restore the original</string>
    <string name="preference_summary_send_feedback">Tell us what you think</string>
    <string name="preference_summary_share">Share this app with your friends</string>
    <string name="preference_summary_troubleshooting">"The app doesn't work"</string>
    <string name="preference_troubleshooting">Troubleshooting</string>
    <string name="running_control_bar_pause">Pause script</string>
    <string name="running_control_bar_resume">Resume</string>
    <string name="running_control_bar_stop">Stop script</string>
    <string name="save_config_add_config_btn">Save the current actions</string>
    <string name="save_config_add_config_title">Add configuration</string>
    <string name="save_config_no_config_found">No Configs found</string>
    <string name="save_config_permission_external_storage">Write storage permission is required for this app</string>
    <string name="save_config_save_my_config_title">My configurations</string>
    <string name="snackbar_go_to_setting">Go to Settings</string>
    <string name="teach_control_bar_info">Click the record button to start recording your gestures.</string>
    <string name="teach_end_icon_info">Click the done button when you finish recording.</string>
    <string name="teach_end_icon_info2">You can drag the done button to adjust its position.</string>
    <string name="teach_multi_touch">Multi-finger gestures</string>
    <string name="teach_multi_touch_info">You can record multi-finger gestures that tap, slide, and bring your fingers together or apart to perform useful actions.</string>
    <string name="teach_new_feature">New Feature</string>
    <string name="teach_summary">You can easily record your gestures</string>
    <string name="teach_summary_first">The new interface allows you to stop, pause or resume the script at any time.</string>
    <string name="translate_summary">Help us translate this app in your language</string>
    <string name="troubleshooting_info2">"If it still doesn't work, please reboot your phone."</string>
    <string name="troubleshooting_info3">The app does not work because the accessibility service has been closed. You need to re-grant permission (turn off and then turn on) to solve this issue.</string>
</resources>