<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/teach_summary" />
    <View android:layout_width="fill_parent" android:layout_height="8.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:layout_width="68.0dip" android:layout_height="90.0dip">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_note_ctb" />
        </LinearLayout>
        <TextView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/teach_control_bar_info" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:layout_width="68.0dip" android:layout_height="90.0dip">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/button_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/button_icon_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_curve_done" />
                <TextView android:textColor="@color/md_grey_800" android:id="@id/button_text_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_action_done" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/teach_end_icon_info" />
            <TextView android:paddingTop="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/teach_end_icon_info2" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>