<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/md_black_1000" android:id="@id/hint_text1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/troubleshooting_info3" />
    <RelativeLayout android:gravity="center_horizontal" android:id="@id/hint_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <ImageView android:id="@id/imageView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/permission_teach_view" android:paddingEnd="30.0dip" />
        <ImageView android:id="@id/switchWidget" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignEnd="@id/imageView4" />
        <LinearLayout android:orientation="vertical" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toStartOf="@id/switchWidget" android:layout_alignStart="@id/imageView4">
            <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permission_tutorial_accessibility" android:paddingStart="26.0dip" />
            <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
        </LinearLayout>
        <TextView android:textSize="14.0sp" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/permission_tutorial_installed_services" android:lines="1" android:layout_below="@id/title" android:paddingStart="16.0dip" android:layout_toStartOf="@id/switchWidget" android:layout_alignStart="@id/imageView4" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:id="@id/app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:layout_centerVertical="true" android:paddingStart="16.0dip" android:layout_toStartOf="@id/switchWidget" android:layout_alignStart="@id/imageView4" />
    </RelativeLayout>
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/md_black_1000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/troubleshooting_info2" />
</LinearLayout>