<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_power_manager" />
    <View android:layout_width="fill_parent" android:layout_height="8.0dip" />
    <TextView android:textSize="14.0sp" android:textColor="@color/md_grey_800" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/force_close_teach_power_manager_before" />
    <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
    <TextView android:textSize="14.0sp" android:textColor="@color/md_grey_800" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/force_close_teach_power_manager_info" />
    <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
    <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/md_grey_800" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/force_close_teach_power_manager_info_step" />
    <View android:layout_width="fill_parent" android:layout_height="4.0dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/steps_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>