<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/app_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:theme="@style/AppTheme.AppBarOverlay" android:id="@id/appBarLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <androidx.appcompat.widget.Toolbar android:id="@id/toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:theme="@style/ToolbarTheme" />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView android:gravity="center" android:id="@id/file_permission_denied" android:paddingLeft="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_vertical_margin" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_config_permission_external_storage" android:layout_centerInParent="true" />
    <Button android:textColor="@android:color/black" android:id="@id/go_to_settings" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/snackbar_go_to_setting" android:layout_below="@id/file_permission_denied" android:layout_centerInParent="true" />
    <RelativeLayout android:id="@id/config_layout" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/appBarLayout">
        <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_config_add_config_title" style="@style/SaveTitleText" />
        <androidx.cardview.widget.CardView android:id="@id/add_new_config" android:clickable="true" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_below="@id/title" android:layout_alignParentStart="true" style="@style/CustomCardView">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_plus" />
                <TextView android:textColor="@color/add_config_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_config_add_config_btn" android:layout_marginStart="4.0dip" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView android:id="@id/configs" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_config_save_my_config_title" android:layout_below="@id/add_new_config" style="@style/SaveTitleText" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/empty_view" android:paddingTop="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/configs" android:layout_centerHorizontal="true">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_empty_config" />
            <TextView android:gravity="center" android:paddingTop="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_config_no_config_found" android:layout_centerInParent="true" />
        </LinearLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/activity_main_coordinator" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/configs">
            <com.tjerkw.slideexpandable.library.ActionSlideExpandableListView android:id="@id/config_list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="#ffffffff" android:dividerHeight="0.0px" style="@style/scrollbar_shape_style" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>
</RelativeLayout>