<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:zyf="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="17.0sp" android:textColor="@color/md_black_1000" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/teach_new_feature" android:layout_alignParentStart="true" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/phone_guide" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/title">
        <View android:layout_width="fill_parent" android:layout_height="8.0dip" />
        <ImageView android:id="@id/guide_container" android:layout_width="160.0dip" android:layout_height="wrap_content" />
        <View android:layout_width="fill_parent" android:layout_height="8.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/phone_guide">
        <TextView android:textSize="15.0sp" android:textColor="@color/md_black_1000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/teach_multi_touch" />
        <View android:layout_width="fill_parent" android:layout_height="8.0dip" />
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/teach_multi_touch_info" />
        </ScrollView>
    </LinearLayout>
</RelativeLayout>